Edit article title to be more concise

--- a/src/content/posts/solve-problems-instead-of-creating-solutions/index.mdx
+++ b/src/content/posts/solve-problems-instead-of-creating-solutions/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to Solve Problems Instead of Creating Solutions
+title: Don't Create Solutions, Solve Problems
 date: 2022-12-14
 author: Cory Serratore
 image: ./thumbnail.png
@@ -8,7 +8,7 @@ summary: A solution, whether it is delivered in the form of a design document or
 articleURL: https://buttondown.email/CorySerratore/archive/how-to-solve-problems-instead-of-creating/
 ---
 
-# How to Solve Problems Instead of Creating Solutions
+# Don't Create Solutions, Solve Problems
 
 I have been a professional software creator for over 25 years.
 
