--- a/src/content/posts/solve-problems-instead-of-creating-solutions/index.mdx
+++ b/src/content/posts/solve-problems-instead-of-creating-solutions/index.mdx
@@ -4,7 +4,7 @@ date: 2022-12-14
 author: Cory Serratore
 image: ./thumbnail.png
 imageAlt: A diagram of the design pattern method.
-summary: A solution, whether it is delivered in the form of a design document or a software system, has no value to my clients and employers if it fails to solve a problem.
+summary: A solution, whether it is delivered in the form of a design document or a software system, has no value to your clients and employers if it fails to solve a problem.
 articleURL: https://buttondown.email/CorySerratore/archive/how-to-solve-problems-instead-of-creating/
 ---
 
