article grammar correction

--- a/src/content/posts/why-you-should-start-with-event-sourcing/index.mdx
+++ b/src/content/posts/why-you-should-start-with-event-sourcing/index.mdx
@@ -48,7 +48,7 @@ The single most important component of a software system—the source of truth o
 
 - Most software systems are developed using agile practices in which requirements and expectations evolve based on a feedback loop of small frequent releases.
 - Almost every component of a typical software system prefers a different view of the data it interacts with.
-- The relational database model is one of the most impactful innovations of computer science and the software industry. It is an incredibly expressive, capable model and flexible model, as far as its adaptability to both transactional and analytical use cases.
+- The relational database model is one of the most impactful innovations of computer science and the software industry. It is an incredibly expressive, capable and flexible model, as far as its adaptability to both transactional and analytical use cases.
   - It is not, however, a flexible model that is responsive to changes to the structure and relationships of the data.
   - Relational models are relatively rigid in their design, and require a relatively high level of skill and upfront modeling decisions to consistently achieve operational responsiveness.
 
